Implement custom API response
